<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/rowReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickReset"
            android:text="@string/restart_period" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/TableOfInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/rowPeriodStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" >

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/period_started" />

        <TextView
            android:id="@+id/valuePeriodStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp" />
    </TableRow>

    <TableRow
        android:id="@+id/rowPlusMinutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/minutes_plus" />

        <TextView
            android:id="@+id/valuePlusMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/rowMinusMinutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/minutes_minus" />

        <TextView
            android:id="@+id/valueMinusMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/rowAllMinutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/minutes_all" />

        <TextView
            android:id="@+id/valueAllMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp" />

    </TableRow>

    <TableRow
        android:id="@+id/rowPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/plus_time_percent" />

        <TextView
            android:id="@+id/valuePercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/rowFromLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/from_last_check" />

        <TextView
            android:id="@+id/valueFromLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp" />
    </TableRow>

</TableLayout>

    <TextView
        android:id="@+id/infoPeriodNotStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_not_started" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonStartPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickStartPeriod"
            android:text="@string/start_period" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickMinus"
            android:text="-"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPlus"
            android:text="+"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</LinearLayout>
